# Similar-Structs-Macro

./: Cargo.toml  README.md
src/: lib.rs
